--- a/learn/tasks/grid/grid3-download.html
+++ b/learn/tasks/grid/grid3-download.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Grid: task 3</title>
+    <title>Activity 14</title>
 
     <link rel="stylesheet" href="../styles.css">
 
@@ -28,7 +28,7 @@
 
       .grid {
         display: grid;
-        grid-template-columns: 1fr 2fr;
+        grid-template-columns: 3fr;
         gap: 10px;
       }
     </style>
